@@ -1,0 +1,1 @@
+[element(test, [], ['Test for handling character entities: A \n'])].
