@@ -1,0 +1,1 @@
+[element(text, [], ['Van Alpha tot ', sdata('\\Omega')])].
